# prefect-ingestor

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: sources.csv
docs/: ARCHITECTURE.md  ROADMAP.md
src/ingestor/: __init__.py  config.py
src/ingestor/adapters/: __init__.py  _scraper_base.py  base.py  oparl_adapter.py  registry.py  ris_allris.py  ris_sdnet.py  ris_sessionnet.py
src/ingestor/adapters/sessionnet/: __init__.py  _dates.py  _html.py  bodies.py  meetings.py
src/ingestor/api/: __init__.py  auth.py  dependencies.py  main.py
src/ingestor/api/management/: __init__.py  router.py  schemas.py
src/ingestor/api/oparl/: __init__.py  router.py
src/ingestor/db/: __init__.py  models.py  session.py
src/ingestor/db/migrations/: env.py
src/ingestor/db/migrations/versions/: 20260417_0001_initial.py  20260424_0002_reliability_and_indexes.py  20260424_0003_api_keys_audit.py  20260502_0004_adapter_type_and_geocode_attempts.py
src/ingestor/flows/: __init__.py  cli.py  extract_text.py  sync_source.py
src/ingestor/flows/tasks/: __init__.py  extract_embedded.py  extract_files.py  geocoding.py  person_photos.py  upsert.py
src/ingestor/oparl/: __init__.py  client.py  types.py
src/ingestor/workers/: __init__.py  api_entrypoint.py  geocoding.py  ocr.py  scheduler.py  seed.py
tests/: conftest.py  test_api_health.py  test_auth.py  test_management_endpoints.py  test_ocr_extract.py  test_oparl_types.py  test_seed.py  test_sync_flow.py  test_upsert.py
