[project]
name = "mandari-prefect-ingestor"
version = "0.1.0"
description = "Zentraler OParl-Aggregator für deutsche Kommunen — Prefect-Flows + FastAPI"
authors = [
    { name = "Mandari", email = "hello@mandari.de" }
]
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Orchestrierung
    "prefect>=3.0",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # HTTP-Client (async)
    "httpx>=0.27",
    # Datenbank
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",     # für Alembic (sync)
    # Validation / Settings
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Logging / Telemetry
    "structlog>=24.4",
    # PDF / OCR
    "pypdf>=5.0",
    "pdf2image>=1.17",
    "pytesseract>=0.3",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # Utils
    "python-dateutil>=2.9",
    "tenacity>=9.0",            # zusätzliche Retry-Patterns
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-python-dateutil",
    "httpx-ws>=0.6",            # für Tests
    "respx>=0.21",              # httpx mocking
    "pre-commit>=4.0",
]

[project.scripts]
ingestor-api = "ingestor.api.main:run"
ingestor-flow = "ingestor.flows.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestor"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "B",           # bugbear
    "UP",          # pyupgrade
    "C4",          # comprehensions
    "ASYNC",       # async best practices
    "RUF",         # ruff
    "S",           # security
    "PTH",         # pathlib
]
ignore = [
    "E501",        # line length (handled by formatter)
    "S101",        # use of assert (OK in tests)
    "B008",        # function calls in defaults (OK for FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["prefect.*", "pdf2image.*", "pytesseract.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=ingestor --cov-report=term-missing"
